# fastmcp-remote-mcp-client

./: .gitignore  AGENTS.md  README.md  SPEC.md  TODO.md  main.py  mcp_servers.json  pyproject.toml
rmcp_client/: __init__.py  cli.py  config.py  init_cli.py  init_repo.py
