[project]
name = "fastmcp-remote-mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.14.4,<3.0.0",
]

[project.scripts]
rmcp-client = "rmcp_client.cli:main"

[build-system]
requires = ["hatchling>=1.27.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.uv]
add-bounds = "major"

[dependency-groups]
dev = [
    "ruff>=0.14.14,<0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rmcp_client"]
